--- a/Simulated Annealing.ipynb
+++ b/Simulated Annealing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
     "np.random.seed(10) # randomize seed\n",
     "\n",
     "# define testfunction, objective, area\n",
-    "test_function = Himmelblau\n",
+    "test_function = Rosenbrock\n",
     "\n",
     "objective = test_function.objective\n",
     "area = test_function.area\n",
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
