--- a/demo_sapso.ipynb
+++ b/demo_sapso.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "from sapso.sa import simulated_annealing\n",
     "from sapso.plot import contour_plot\n",
-    "from sapso.test import ackley, sphere, beale, beale"
+    "from sapso.test import ackley, sphere, beale, himmelblau"
    ]
   },
   {
