--- a/report/presentation/report.tex
+++ b/report/presentation/report.tex
@@ -3,7 +3,7 @@
 
 \title{Optimization Methods for Engineers}
 \date[July 2023]{Spring Semester 2023}
-\author{Thierry Meier, Geventh *NAME*}
+\author{Geventh Vignendra, Thierry Meier}
 \institute{Optimization Methods for Engineers\\227-0707-00L}
 
 \usetheme{eth}
