--- a/report/presentation/beamerinnerthemeeth.sty
+++ b/report/presentation/beamerinnerthemeeth.sty
@@ -6,6 +6,8 @@
 \mode<presentation>
 
 % Links and email addresses
+\usepackage{fontspec}
+\defaultfontfeatures{Path = /usr/local/texlive/2023basic/texmf-dist/fonts/opentype/public/fontawesome/}
 \usepackage{fontawesome}
 \let\orighref\href
 \renewcommand{\href}[2]{\orighref{#1}{#2~\raisebox{-0.05\baselineskip}{\faExternalLink}}}
