recompile pdf with hyperlinks

--- a/report/presentation/report.tex
+++ b/report/presentation/report.tex
@@ -426,7 +426,7 @@
     \begin{column}{0.5\textwidth}
         \textbf{Simulated Annealing}
         \begin{itemize}
-            \item The evaluation plots are in the \hyperref[sec:sensitivity_study_appendix]{\beamerbutton{Appendix}}.
+            \item The evaluation plots are in the \hyperlink{sec:sensitivity_study_appendix}{\textcolor{accentcolor}{Appendix}}.
             \item The number of iterations is significantly higher w.r.t. (A)PSO due to each SA iteration being much cheaper in terms of computation. A step-size of $20$\% of the search space seems to suit most scenarios, anything above makes too big jumps. The temperature did not have any significant impact on the performance, thus it is kept as it initially was.
         \end{itemize}
 
@@ -462,7 +462,7 @@
     \begin{column}{0.5\textwidth}
         \textbf{Particle Swarm Optimization}
         \begin{itemize}
-            \item The evaluation plots are in the \hyperref[sec:sensitivity_study_appendix]{\beamerbutton{Appendix}}.
+            \item The evaluation plots are in the \hyperlink{sec:sensitivity_study_appendix}{\textcolor{accentcolor}{Appendix}}.
             \item In comparison to SA, the number of iterations of PSO are more than tenfold lower however at the expense of computing $200$ times more fitness evaluations per iterations. It seems that a slightly increased attraction towards the swarm optimum helps the convergence of the algorithm.
         \end{itemize}
 
@@ -498,7 +498,7 @@
     \begin{column}{0.5\textwidth}
         \textbf{Adaptive Particle Swarm Optimization}
         \begin{itemize}
-            \item The evaluation plots are in the \hyperref[sec:sensitivity_study_appendix]{\beamerbutton{Appendix}}.
+            \item The evaluation plots are in the \hyperlink{sec:sensitivity_study_appendix}{\textcolor{accentcolor}{Appendix}}.
             \item The adaptive weighting of the velocity components favors slighly more iterations and stronger attraction towards the swarm optimum for similar performance as PSO. The different interpolation methods used did not contribute significantly, thus the simplest is kept.
         \end{itemize}
 
