reformulate component weighting slide

--- a/report/presentation/report.tex
+++ b/report/presentation/report.tex
@@ -156,8 +156,8 @@
 % SLIDE
 %
 
-\begin{frame}[fragile]{APSO - Additional Adaptive Schemes}
-    Additionally, cubic and exponential interpolation methods are also investigated.
+\begin{frame}[fragile]{APSO - Other Adaptive Schemes}
+    Additionally, we investigate the effect of cubic and exponential interpolation methods as well.
     \smallskip
     \begin{columns}
     \begin{column}{0.4\textwidth}
