update link to sapso library

--- a/report/presentation/report.tex
+++ b/report/presentation/report.tex
@@ -50,7 +50,7 @@
 
         \begin{itemize}
             \item \textbf{understand} and \textbf{implement} heuristics behind SA and PSO
-            \item \textbf{develop} small, modular python optimization library, called \href{https://github.com/thmeier}{\textbf{sapso}}
+            \item \textbf{develop} small, modular python optimization library, called \href{https://github.com/Geventh/Optimization-Methods/tree/main/sapso}{\textcolor{accentcolor}{\textbf{sapso}}}
             \item \textbf{propose new optimizer}, based on SA and PSO to overcome their limitations
             \item tune hyperparameters by \textbf{sensitivity study}
             \item \textbf{compare} optimizers via benchmarking
